fix(notification): adding fixes for font-size on parent causing layout shift on icons.

--- a/packages/web-components/src/components/rux-notification/rux-notification.scss
+++ b/packages/web-components/src/components/rux-notification/rux-notification.scss
@@ -32,6 +32,7 @@
     width: 100%;
     box-sizing: border-box;
     min-height: var(--height);
+    font-size: var(--font-size-base); // fix for parent font-size causing icon shift.
 }
 
 .rux-notification-banner__inner {
